bug fix for z-index on fixed bar messing with card flip items

--- a/css/_handlebar.scss
+++ b/css/_handlebar.scss
@@ -6,6 +6,7 @@
   position: absolute;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.75); 
+  z-index: 1000;
   
   @include transition (all 0.3s ease-out 0.75s);
 
@@ -13,7 +14,7 @@
     width: 100%;
     height: 80px;
     background-color: $ligthBlack;
-
+    @include transform(translate3d(0,0,0));
      &.collapse {
       position: fixed;
       top: 0;
